# EDA-practica5

./: .gitignore  CMakeLists.txt  GestorTorneo.cpp  GestorTorneo.h  Jugador.h  ListaJugadores.cpp  ListaJugadores.h  Pila.h  README.md  main.cpp
Ejercicio1/: Arbol.cpp  Arbol.h  GestorInventario.cpp  GestorInventario.h  IArbol.h  Nodo.cpp  Nodo.h  Producto.cpp  Producto.h  mainE1.cpp
